[gd_scene load_steps=3 format=3 uid="uid://djljptxmkbwj6"]

[ext_resource type="PackedScene" uid="uid://bp7n5ww0e441n" path="res://scenes/card_slot.tscn" id="1_bnbr6"]
[ext_resource type="Script" path="res://scripts/test.gd" id="1_mds67"]

[node name="test" type="Node2D"]
script = ExtResource("1_mds67")

[node name="CardSlot" parent="." instance=ExtResource("1_bnbr6")]
position = Vector2(664, 541)

[node name="CardSlot2" parent="." instance=ExtResource("1_bnbr6")]
position = Vector2(858, 541)

[node name="CardSlot3" parent="." instance=ExtResource("1_bnbr6")]
position = Vector2(1054, 541)

[node name="CardSlot4" parent="." instance=ExtResource("1_bnbr6")]
position = Vector2(664, 286)

[node name="CardSlot5" parent="." instance=ExtResource("1_bnbr6")]
position = Vector2(858, 286)

[node name="CardSlot6" parent="." instance=ExtResource("1_bnbr6")]
position = Vector2(1054, 290)

[node name="EndTurn" type="Button" parent="."]
offset_left = 1604.0
offset_top = 470.0
offset_right = 1878.0
offset_bottom = 577.0
theme_override_font_sizes/font_size = 30
text = "Закончить ход"

[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
